[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Project/Debug.gd" type="Script" id=1]
[ext_resource path="res://src/Fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 2 )

[node name="Debug" type="Node2D"]
script = ExtResource( 1 )

[node name="FullBG" type="ColorRect" parent="."]
margin_left = 1.0
margin_top = -5.0
margin_right = 1284.0
margin_bottom = 727.0
color = Color( 0.168627, 0.141176, 0.141176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Party" type="Button" parent="."]
modulate = Color( 0.976471, 0.847059, 0.847059, 1 )
margin_left = 900.0
margin_top = 204.149
margin_right = 1008.0
margin_bottom = 272.149
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Party"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Button" parent="."]
modulate = Color( 0.976471, 0.847059, 0.847059, 1 )
margin_left = 600.0
margin_top = 200.0
margin_right = 708.0
margin_bottom = 268.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Items"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Battle" type="Button" parent="."]
modulate = Color( 0.976471, 0.847059, 0.847059, 1 )
margin_left = 300.0
margin_top = 200.0
margin_right = 408.0
margin_bottom = 268.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Battle"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Party" to="." method="_on_Party_pressed"]
[connection signal="pressed" from="Inventory" to="." method="_on_Inventory_pressed"]
[connection signal="pressed" from="Battle" to="." method="_on_Battle_pressed"]
